--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "CCIC Camp Meeting 2025 - Photo Upload App",
   "type": "module",
-  "homepage": "https://ejutemiede.github.io/ccic-camp-meeting-2025",
+  "homepage": "https://dacoolguy1.github.io/cm",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
