--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,19 @@
 {
+  "version": 2,
+  "name": "ccic-camp-meeting-2025",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
