--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
